--- a/atividade05/index.html
+++ b/atividade05/index.html
@@ -112,7 +112,6 @@
     </section>
   </main>
   
-  <script src="script.js"></script>
-  <script src="list.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
