--- a/atividade05/index.html
+++ b/atividade05/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <!-- Modal -->
-  <main class="lg:w-[650px] md:w-[450px] sm:w-[350px] 
+  <main class="lg:w-[650px] md:w-[450px] min-[320px]:w-[300px] 
   my-[25px] py-[25px] px-[10px]
   bg-yellow-50 shadow-3xl rounded-lg
   flex flex-col
@@ -69,10 +69,10 @@
     w-full py-[25px] px-[25px] relative">
       <h1 class="self-center text-slate-600 font-bold text-[35px]">Lista de Tarefas</h1>
       <div id="row1" class=" 
-      flex lg:flex-row md:flex-col sm:flex-col mx-auto w-[85%]
+      flex lg:flex-row md:flex-col min-[320px]:flex-col mx-auto w-[85%]
       gap-[20px] p-[25px]">
-        <input id="input1" type="text" placeholder="Titulo da tarefa..." class="w-[66%]  md:w-full sm:w-full rounded-sm">
-        <select id="input2" class="w-[33%] md:w-full sm:w-full  rounded-sm
+        <input id="input1" type="text" placeholder="Titulo da tarefa..." class="w-[66%]  md:w-full min-[320px]:w-full rounded-sm">
+        <select id="input2" class="w-[33%] md:w-full min-[320px]:w-full  rounded-sm
         cursor-pointer" name="Typo" id="">
           <option value="" selected hidden>Escolha</option>
           <option value="Estudo">Estudos</option>
